:sparkles: FEAT: finalização da implementação da segurança da api